# datalens-ai

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_HF.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  hf-deploy.yml
.streamlit/: config.toml
api-reference/: index.html
app/: streamlit_app.py
app/styles/: custom.css
changelog/: index.html
cli-reference/: index.html
contributing/: index.html
data/samples/: ecommerce_orders.csv  hr_employees.csv  metadata.yaml  stock_prices.csv  world_climate.csv
docs/: api-reference.md  changelog.md  cli-reference.md  contributing.md  getting-started.md  index.md
docs/user-guide/: asking-questions.md  data-stories.md  uploading-data.md  visualizations.md
getting-started/: index.html
scripts/: generate_sample_data.py
search/: search_index.json
src/datalens_ai/: __init__.py  __main__.py  cli.py
src/datalens_ai/ai/: base.py  gemini_provider.py  insight_generator.py  mock_provider.py  nl_to_sql.py  prompt_templates.py  query_suggester.py  sql_explainer.py
src/datalens_ai/core/: config.py  constants.py  exceptions.py  models.py  registry.py
src/datalens_ai/engine/: duckdb_engine.py  query_context.py  result_analyzer.py  sql_validator.py
src/datalens_ai/ingestion/: detector.py  loader.py  profiler.py  quality.py  relationships.py  samples.py
src/datalens_ai/reporters/: __init__.py  csv_reporter.py  html.py  json_reporter.py  markdown.py  pdf.py
src/datalens_ai/stories/: __init__.py  builder.py  export.py  templates.py
src/datalens_ai/utils/: caching.py  data_utils.py  rate_limiter.py  sql_utils.py  text.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_chart_selector.py  test_config.py  test_duckdb_engine.py  test_insight_generator.py  test_mock_provider.py  test_models.py  test_reporters.py  test_sql_utils.py  test_sql_validator.py  test_stories.py  test_text.py
user-guide/asking-questions/: index.html
user-guide/data-stories/: index.html
user-guide/uploading-data/: index.html
user-guide/visualizations/: index.html
(+3 files in other folders)
